--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -1,97 +1,121 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-back-button slot="start" default-href="/layout/home"></ion-back-button>
+    <ion-back-button slot="start" default-href="/layout"></ion-back-button>
     <ion-title>Blood Donations</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div [ngSwitch]="currentTitle">
-    <ion-item class="mt-2" lines="none" *ngSwitchCase="'history'">
-      <ion-segment  [(ngModel)]="activeSegment" [scrollable]="true" (ionChange)="segmentChange($event)">
-        <ion-segment-button value="latest">
-          <ion-label class="ion-text-capitalize">Latest</ion-label>
-        </ion-segment-button>
+  <div *ngIf="loader; else otherContent">
+    <app-skeleton></app-skeleton>
+  </div>
+  <ng-template #otherContent>
+    <div [ngSwitch]="currentTitle">
+      <ion-item class="mt-2" lines="none" *ngSwitchCase="'history'">
+        <ion-segment
+          [(ngModel)]="activeSegment"
+          [scrollable]="true"
+          (ionChange)="segmentChange($event)"
+        >
+          <ion-segment-button value="latest">
+            <ion-label class="ion-text-capitalize">Latest</ion-label>
+          </ion-segment-button>
 
-        <ion-segment-button value="history">
-          <ion-label class="ion-text-capitalize">History</ion-label>
-        </ion-segment-button>
-      </ion-segment>
-    </ion-item>
-    <div [ngSwitch]="activeSegment">
-      <div *ngSwitchCase="'latest'">
-        <ng-container *ngIf="latestTabDetails.length > 0">
-          <ion-card *ngFor="let l of latestTabDetails" (click)="openModel('latest',l)">
-            <ion-card-content class="ion-no-padding">
-              <ion-grid>
-                <ion-row >
-                  <ion-col size="3" class="drop">
-                    <img src="../../../../../assets/bloodHand.gif" alt="" />
-                    <ion-card-title>{{l?.bloodGroup}}</ion-card-title>
-                  </ion-col>
-                  <ion-col size="6">
-                    <ion-label class="name">{{l?.name}}</ion-label>
-                    <div class="ion-margin-top">
-                      <i class="fa-solid fa-location-dot"></i>
-                      <ion-label class="donar">{{l?.city +', '+l?.state}}</ion-label>
-                    </div>
-                    <div class="ion-margin-top donar-container">
-                      <div>
-                        <i class="fa-solid fa-user"></i>
-                        <ion-label class="donar">Donor</ion-label>
+          <ion-segment-button value="history">
+            <ion-label class="ion-text-capitalize">History</ion-label>
+          </ion-segment-button>
+        </ion-segment>
+      </ion-item>
+      <div [ngSwitch]="activeSegment">
+        <div *ngSwitchCase="'latest'">
+          <ng-container *ngIf="latestTabDetails.length > 0">
+            <ion-card
+              *ngFor="let l of latestTabDetails"
+              (click)="openModel('latest',l)"
+            >
+              <ion-card-content class="ion-no-padding">
+                <ion-grid>
+                  <ion-row>
+                    <ion-col size="3" class="drop">
+                      <img src="../../../../../assets/bloodHand.gif" alt="" />
+                      <ion-card-title>{{l?.bloodGroup}}</ion-card-title>
+                    </ion-col>
+                    <ion-col size="6">
+                      <ion-label class="name">{{l?.name}}</ion-label>
+                      <div class="ion-margin-top">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <ion-label class="donar"
+                          >{{l?.city +', '+l?.state}}</ion-label
+                        >
                       </div>
-                      <div class="ion-padding-start">
-                        <i class=" fa-solid fa-person-half-dress"></i>
-                        <ion-label class="donar">{{l?.gender}}</ion-label>
+                      <div class="ion-margin-top donar-container">
+                        <div>
+                          <i class="fa-solid fa-user"></i>
+                          <ion-label class="donar">Donor</ion-label>
+                        </div>
+                        <div class="ion-padding-start">
+                          <i class="fa-solid fa-person-half-dress"></i>
+                          <ion-label class="donar">{{l?.gender}}</ion-label>
+                        </div>
                       </div>
-                    </div>
-                  </ion-col>
-                  <ion-col>
-                    <ion-label class="status">{{l?.status}}</ion-label>
-                  </ion-col>
-                </ion-row>
-              </ion-grid>
-            </ion-card-content>
-          </ion-card>
-        </ng-container>
-      </div>
-      <div *ngSwitchCase="'history'">
-      <ng-container *ngIf="historyTabDetails.length > 0" >
-        <ion-card *ngFor="let h of historyTabDetails"(click)="openModel('history',h)">
-          <ion-card-content class="ion-no-padding">
-            <ion-grid>
-              <ion-row>
-                <ion-col size="3" class="drop">
-                  <img src="../../../../../assets/bloodHand.gif" alt="" />
-                  <ion-card-title>{{h?.bloodGroup}}</ion-card-title>
-                </ion-col>
-                <ion-col size="6">
-                  <ion-label class="name">{{h?.attender?.firstName + ' '+ h?.attender?.lastName}}</ion-label>
-                  <div class="ion-margin-top">
-                    <i class="icons-img fa-solid fa-location-dot"></i>
-                    <ion-label class="donar">{{h?.city +', '+h?.state}}</ion-label>
-                  </div>
-                  <div class="ion-margin-top donar-container">
-                    <div>
-                      <i class="fa-solid fa-user"></i>
-                      <ion-label class="donar">Donor</ion-label>
-                    </div>
-                    <div class="ion-padding-start">
-                      <i class="icons-img fa-solid fa-person-half-dress"></i>
-                      <ion-label class="donar">{{h?.gender}}</ion-label>
-                    </div>
-                  </div>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </ion-card-content>
-        </ion-card>
-      </ng-container>
-     
+                    </ion-col>
+                    <ion-col>
+                      <ion-label *ngIf="!(user.role=='ADMIN' && l.status=='DONE')" class="status">{{l?.status}}</ion-label>
+                      <button *ngIf="user.role=='ADMIN' && l.status=='DONE'" (click)="close(l.id)">Close</button>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-card-content>
+            </ion-card>
+          </ng-container>
+        </div>
+        <div *ngSwitchCase="'history'">
+          <ng-container *ngIf="historyTabDetails.length > 0">
+            <ion-card
+              *ngFor="let h of historyTabDetails"
+              (click)="openModel('history',h)"
+            >
+              <ion-card-content class="ion-no-padding">
+                <ion-grid>
+                  <ion-row>
+                    <ion-col size="3" class="drop">
+                      <img src="../../../../../assets/bloodHand.gif" alt="" />
+                      <ion-card-title>{{h?.bloodGroup}}</ion-card-title>
+                    </ion-col>
+                    <ion-col size="6">
+                      <ion-label class="name"
+                        >{{h?.name 
+                       }}</ion-label
+                      >
+                      <div class="ion-margin-top">
+                        <i class="icons-img fa-solid fa-location-dot"></i>
+                        <ion-label class="donar"
+                          >{{h?.city +', '+h?.state}}</ion-label
+                        >
+                      </div>
+                      <div class="ion-margin-top donar-container">
+                        <div>
+                          <i class="fa-solid fa-user"></i>
+                          <ion-label class="donar">Donor</ion-label>
+                        </div>
+                        <div class="ion-padding-start">
+                          <i
+                            class="icons-img fa-solid fa-person-half-dress"
+                          ></i>
+                          <ion-label class="donar">{{h?.gender}}</ion-label>
+                        </div>
+                      </div>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-card-content>
+            </ion-card>
+          </ng-container>
+        </div>
       </div>
     </div>
-  </div>
-  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-    <ion-infinite-scroll-content></ion-infinite-scroll-content>
-  </ion-infinite-scroll>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+  </ng-template>
 </ion-content>
