--- a/App/src/app/layout/pages/admin/mylist-details/request-mylist-detail/request-mylist-detail.page.html
+++ b/App/src/app/layout/pages/admin/mylist-details/request-mylist-detail/request-mylist-detail.page.html
@@ -109,6 +109,7 @@
                         interface="popover"
                         placeholder="Select Mode"
                         [(ngModel)]="providedBy"
+                        [ngModelOptions]="{standalone: true}"
                         [disabled]="isDisabled"
                       >
                         <ion-select-option value="BLOOD_BANK"
@@ -197,9 +198,9 @@
                       >State
                     </ion-label>
                     <ionic-selectable
-                      item-content
                       class="ion-text-capilatize"
-                      #selectableState
+                      [(ngModel)]="selectTable.state"
+                      [ngModelOptions]="{standalone: true}"
                       [items]="states"
                       itemTextField="name"
                       itemValueField="name"
@@ -208,28 +209,7 @@
                       [hasConfirmButton]="true"
                       [hasInfiniteScroll]="true"
                     >
-                      <ng-template ionicSelectableHeaderTemplate>
-                        <ion-toolbar class="bg-color-2">
-                          <ion-buttons slot="start">
-                            <ion-button
-                              class="text-color-4"
-                              (click)="selectableState.close()"
-                            >
-                              <ion-icon name="arrow-back-outline"></ion-icon>
-                            </ion-button>
-                          </ion-buttons>
-                          <ion-title
-                            class="text-color-4 ion-text-capitalize ion-text-wrap"
-                          >
-                            State
-                          </ion-title>
-                        </ion-toolbar>
-                      </ng-template>
-                      <ng-template ionicSelectableItemTemplate let-port="item">
-                        <ion-label class="ion-text-capitalize ion-text-wrap">
-                          {{port?.name}}
-                        </ion-label>
-                      </ng-template>
+                  
                     </ionic-selectable>
                   </ion-item>
                 </ion-col>
@@ -243,41 +223,18 @@
                       City
                     </ion-label>
                     <ionic-selectable
-                      item-content
                       class="ion-text-capilatize"
                       [(ngModel)]="selectTable.city"
-                      #selectableCity
+                      [ngModelOptions]="{standalone: true}"
                       [items]="cities"
                       itemTextField="name"
-                      itemValueField="id"
+                      itemValueField="name"
                       [canSearch]="true"
                       [hasConfirmButton]="true"
                       [hasInfiniteScroll]="true"
                       (onChange)="setCity($event)"
-                       disable="!this.bloodRequestAllocateForm.value.bankState"
                     >
-                      <ng-template ionicSelectableHeaderTemplate>
-                        <ion-toolbar class="bg-color-2">
-                          <ion-buttons slot="start">
-                            <ion-button
-                              class="text-color-4"
-                              (click)="selectableCity.close()"
-                            >
-                              <ion-icon name="arrow-back-outline"></ion-icon>
-                            </ion-button>
-                          </ion-buttons>
-                          <ion-title
-                            class="text-color-4 ion-text-capitalize ion-text-wrap"
-                          >
-                            City
-                          </ion-title>
-                        </ion-toolbar>
-                      </ng-template>
-                      <ng-template ionicSelectableItemTemplate let-port="item">
-                        <ion-label class="ion-text-capitalize ion-text-wrap">
-                          {{port?.name}}
-                        </ion-label>
-                      </ng-template>
+                   
                     </ionic-selectable>
                   </ion-item>
                 </ion-col>
@@ -339,6 +296,7 @@
       <div class="ion-padding" slot="content">
         <ion-card>
           <ion-card-content>
+            <ng-container *ngIf="donorEdit" >
             <ion-row class="ion-align-items-center ion-justify-content-center">
               <ion-col size="8">
                 <ion-item fill="outline" lines="none" label="Select Option">
@@ -346,10 +304,10 @@
                     >Select Option</ion-label
                   >
                   <ionic-selectable
-                    item-content
                     class="ion-text-capilatize"
-                    #selectableDonor
                     [items]="donorData"
+                    [(ngModel)]="selectTable.donor"
+                    [ngModelOptions]="{standalone: true}"
                     itemTextField="name"
                     itemValueField="id"
                     [canSearch]="true"
@@ -357,38 +315,17 @@
                     [hasConfirmButton]="true"
                     [hasInfiniteScroll]="true"
                   >
-                    <ng-template ionicSelectableHeaderTemplate>
-                      <ion-toolbar class="bg-color-2">
-                        <ion-buttons slot="start">
-                          <ion-button
-                            class="text-color-4"
-                            (click)="selectableDonor.close()"
-                          >
-                            <ion-icon name="arrow-back-outline"></ion-icon>
-                          </ion-button>
-                        </ion-buttons>
-                        <ion-title
-                          class="text-color-4 ion-text-capitalize ion-text-wrap"
-                        >
-                          Donor
-                        </ion-title>
-                      </ion-toolbar>
-                    </ng-template>
-                    <!-- <ng-template ionicSelectableItemTemplate let-port="item">
-                    <ion-label class="ion-text-capitalize ion-text-wrap">
-                      {{port?.name}}
-                    </ion-label>
-                  </ng-template> -->
+               
                   </ionic-selectable>
                 </ion-item>
               </ion-col>
             </ion-row>
             <ion-row>
-              <ion-col class="ion-text-center" *ngIf="!!data.donor">
-                <ion-button>Assign</ion-button>
-              </ion-col>
               <ion-col class="ion-text-center" *ngIf="!data.donor">
-                <ion-button>Re-Assign</ion-button>
+                <ion-button (click)="allocate()">Allocate</ion-button>
+              </ion-col>
+              <ion-col class="ion-text-center" *ngIf="!!data.donor">
+                <ion-button (click)="allocate()">Re-Allocate</ion-button>
               </ion-col>
             </ion-row>
 
@@ -404,12 +341,93 @@
                 <ion-button (click)="navigate()">New Donar</ion-button>
               </ion-col>
             </ion-row>
+       
             <!-- <ion-row>
               <ion-col class="ion-text-center">
                 <ion-button>Submit</ion-button>
               </ion-col>
             </ion-row> -->
             <ng-container *ngIf="!!donor">
+              <ion-grid>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Name</ion-label>
+                    <ion-label>: {{donor?.name}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Age</ion-label>
+                    <ion-label>: {{donor?.age}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Gender</ion-label>
+                    <ion-label>: {{donor?.gender}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Blood Group</ion-label>
+                    <ion-label>: {{donor?.bloodGroup}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Donation Date</ion-label>
+                    <ion-label>: {{donor?.donationDate}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">State</ion-label>
+                    <ion-label>: {{donor?.state}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">City</ion-label>
+                    <ion-label>: {{donor?.city}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row *ngIf="donor.gender == 'FEMALE'">
+                  <ion-col size="12">
+                    <ion-label class="head">Father/Husband</ion-label>
+                    <ion-label>: {{donor.fatherOrHusband}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Hemoglobin</ion-label>
+                    <ion-label>: {{donor?.hemoglobin}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Illness</ion-label>
+                    <ion-label>: {{donor?.illness}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Mobile Number</ion-label>
+                    <ion-label>: {{donor?.mobileNo}}</ion-label>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ng-container>
+          </ng-container>
+            <ng-container *ngIf="!!donor && !donorEdit">
+              <ion-item class="ion-no-padding ion-no-margin" lines="none">
+                <ion-icon
+                  *ngIf="data.status != 'DONE' && data.status != 'RECEIVED'"
+                  slot="end"
+                  color="primary"
+                  name="create-outline"
+                  (click)="donorEditData()"
+                ></ion-icon>
+              </ion-item>
               <ion-grid>
                 <ion-row>
                   <ion-col size="12">
